--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,8 +3,10 @@
 @import "base/typography";
 @import "base/icons";
 @import "base/common";
+@import "base/list";
 
 @import "layout/sidebar";
+@import "layout/navigation";
 
 @import "components/academicnote";
 @import "components/activitylabel";
@@ -14,6 +16,7 @@
 @import "components/card";
 @import "components/carousel";
 @import "components/collapse";
+@import "components/download";
 @import "components/embed";
 @import "components/floatbox";
 @import "components/footnote";
@@ -28,9 +31,6 @@
 @import "components/table";
 @import "components/timeline";
 @import "components/viewhide";
-
-@import "activities/database";
-@import "activities/oublog";
 
 @import "pages/home";
 @import "pages/section";
