--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -6,3 +6,12 @@
     background-color: transparent;
   }
 }
+
+#region-main {
+  .course-content {
+    ul.grid,
+    ul.ctopics {
+      margin: 0;
+    }
+  }
+}
